create a list function to get all the favorite products of the user with the details and make swaggers for all the functions.
