# routes/api/favorite.php
@@ -6,5 +6,6 @@ use Illuminate\Support\Facades\Route;
 Route::group(['middleware' => ['auth.jwt', 'blacklist']], function () {
     Route::get('/favorites/{store_id}/products/{product_id}', [FavoriteController::class, 'add']);
     Route::delete('/favorites/{store_id}/products/{product_id}', [FavoriteController::class, 'remove']);
+    Route::get('/favorites', [FavoriteController::class, 'list']);
     Route::get('/favorites/{store_id}/products/{product_id}/check', [FavoriteController::class, 'check']);
 });
